--- a/iXplore/iXplore/SpotTableViewCell.xib
+++ b/iXplore/iXplore/SpotTableViewCell.xib
@@ -1,18 +1,69 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="SpotTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SpotTableViewCell" id="KGk-i7-Jjw" customClass="SpotTableViewCell" customModule="iXplore" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="88"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="87.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ke1-Oi-Rte">
+                        <rect key="frame" x="96" y="29" width="50" height="50"/>
+                        <state key="normal" image="star_black.png"/>
+                        <connections>
+                            <action selector="starTouched:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="4s6-Yc-Bm3"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="V8Q-pi-X6W">
+                        <rect key="frame" x="149" y="29" width="50" height="50"/>
+                        <state key="normal" image="star_black.png"/>
+                        <connections>
+                            <action selector="starTouched:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="a53-eN-pvk"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f7Q-hb-NYz">
+                        <rect key="frame" x="203" y="29" width="50" height="50"/>
+                        <state key="normal" image="star_black.png"/>
+                        <connections>
+                            <action selector="starTouched:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="Quu-NC-p1X"/>
+                        </connections>
+                    </button>
+                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BWw-3w-Rhp">
+                        <rect key="frame" x="257" y="29" width="50" height="50"/>
+                        <state key="normal" image="star_black.png"/>
+                        <connections>
+                            <action selector="starTouched:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="rx8-Pq-7VL"/>
+                        </connections>
+                    </button>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fdR-26-gk6">
+                        <rect key="frame" x="0.0" y="0.0" width="88" height="88"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jSS-Kw-9EW">
+                        <rect key="frame" x="96" y="8" width="221" height="27"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="cellImage" destination="fdR-26-gk6" id="J3l-c3-V5Z"/>
+                <outlet property="label" destination="jSS-Kw-9EW" id="MF1-pc-rDk"/>
+                <outlet property="star1" destination="ke1-Oi-Rte" id="Jky-UH-p8A"/>
+                <outlet property="star2" destination="V8Q-pi-X6W" id="ttX-Kr-F27"/>
+                <outlet property="star3" destination="f7Q-hb-NYz" id="yO7-en-EAh"/>
+                <outlet property="star4" destination="BWw-3w-Rhp" id="Un4-s9-8DI"/>
+            </connections>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="star_black.png" width="75" height="75"/>
+    </resources>
 </document>
