--- a/iXplore/iXplore/NewPlaceViewController.xib
+++ b/iXplore/iXplore/NewPlaceViewController.xib
@@ -62,7 +62,7 @@
                     <rect key="frame" x="283" y="259" width="34" height="30"/>
                     <state key="normal" title="Save"/>
                     <connections>
-                        <action selector="saveButtonTapped:" destination="-1" eventType="touchUpInside" id="048-8C-5c4"/>
+                        <action selector="saveButtonTapped:" destination="-1" eventType="touchUpInside" id="ovJ-ab-2tc"/>
                     </connections>
                 </button>
             </subviews>
